# ArxFramework

./: .gitattributes  .gitignore  README.md  README.md.md  detailed-study.md
code/ArxFramework/crud/: Cargo.toml  crud_ops.rs  mod.rs  models.rs
code/ArxFramework/crud/models/: api_key_model.rs  article_model.rs  category_model.rs  command_model.rs  comment_model.rs  configuration_model.rs  device_model.rs  document_model.rs  endpoint_model.rs  exe_log_model.rs  file_model.rs  firmware_version_model.rs  job_model.rs  log_event_model.rs  macro_model.rs  page_model.rs  permission_model.rs  preferences_model.rs  rate_limit_rule.rs  request_log_model.rs  schedule_model.rs  script_model.rs  sensor_data_model.rs  settings_model.rs  tag_model.rs  task_model.rs  token_model.rs  user_model.rs
code/ArxFramework/crud/models/default/: api_key_model.rs  article_model.rs  category_model.rs  command_model.rs  configuration_model.rs  device_model.rs  document_model.rs  file_model.rs  job_model.rs  log_event_model.rs  macro_model.rs  mod.rs  page_model.rs  permission_model.rs  preferences_model.rs  project_model.rs  rate_limit_rule.rs  request_log_model.rs  schedule_model.rs  script_model.rs  sensor_data_model.rs  tag_model.rs  task_model.rs  token_model.rs
code/ArxFramework/crud/models/default/Hide/: firmware_version_model.rs  sensor_data_model.rs  settings_model.rs  user_model.rs
code/ArxFramework/src/crud/: Cargo.toml  crud_ops.rs  mod.rs
code/ArxFramework/src/crud/models/: mod.rs
code/ArxFramework/src/crud/models/default/: api_key.rs  article.rs  category.rs  command.rs  (+27 more)
(+150 files in other folders)
