[package]
name = "crud"
version = "0.0.1"
edition = "2021"

[dependencies]
core = { path = "../core/" }
config = { path = "../config/" }
log = "0.4.14"  # Per la gestione dei log


[lib]
name = "crud"
path = "mod.rs"

# Feature Flags
[features]
# Definizione delle feature per i moduli
auth = []
crud = []
api = []
file_management = []
task_automation = []
blockchain = []
ml = []
frontend = []  # Da abilitare solo se si implementa un modulo Rust per frontend
# Definizione delle feature per i diversi tipi di applicazioni
webapp = ["auth", "crud", "api", "frontend"]
api_backend = ["auth", "crud", "api"]
desktop = []
automation = ["task_automation"]
embedded = []  # I sistemi embedded utilizzano solo core e monitoring